--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -179,12 +179,16 @@ jobs:
       - name: mkdir folder
         run: |
           ans=${{ github.ref }}
-          mkdir -p release/${ans:10}/
-          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ release/${ans:10}/
-          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ release/${ans:10}/
-          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ release/${ans:10}/
+          rep=${{ github.repository }}
+          folder=release/$rep/${ans:10}/
+
+          echo $folder
+          mkdir -p folder
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ folder
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ folder
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ folder
           ans=${{ github.ref }}
-          echo ${ans:10} > release/LATEST
+          echo ${ans:10} > folder/LATEST
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
