--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -178,17 +178,22 @@ jobs:
 
       - name: mkdir folder
         run: |
-          ans=${{ github.ref }}
+          ref=${{ github.ref }}
           rep=${{ github.repository }}
-          folder=release/$rep/${ans:10}/
+          folder=release/$rep/${ref:10}/
 
           echo $folder
           mkdir -p folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ folder
-          ans=${{ github.ref }}
-          echo ${ans:10} > folder/LATEST
+          echo ${ref:10} > folder/LATEST
+
+          echo "0000"
+          ls
+          echo "11111"
+          ls $folder
+          echo "222"
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -198,4 +203,7 @@ jobs:
       - name: Deploy static site to S3 bucket
         run: |
           sudo apt-get install awscli
-          aws s3 sync release/ s3://qkcmainnet-go/data/release --acl public-read
+          echo "111"
+          ls
+          echo "22222"
+          aws s3 sync release/ s3://qkcmainnet-go/data/ --acl public-read
