--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -184,9 +184,9 @@ jobs:
 
           echo $folder
           mkdir -p $folder
-          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ folder
-          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ folder
-          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ folder
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ $folder
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ $folder
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ $folder
           echo ${ref:10} > $folder/LATEST
 
           echo "0000"
