--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -187,7 +187,7 @@ jobs:
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ $folder
-          echo ${ref:10} > $folder/LATEST
+          echo ${ref:10} > release/$rep/LATEST
 
           echo "0000"
           ls
