--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -184,9 +184,22 @@ jobs:
           rep=${{ github.repository }}
           folder=release/$rep/${ref:10}/
           mkdir -p $folder
+          echo $ref
+          echo $rep
+          echo $folder
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/mainnet/singularity/cluster_config_template.json /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/mainnet/singularity/cluster_config_template.json /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/mainnet/singularity/cluster_config_template.json /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/run_cluster.sh /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/run_cluster.sh /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/
+          cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/run_cluster.sh /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ $folder
+          echo $folder
+          echo "111"
+          ls
+          echo "222"
           echo ${ref:10} > release/$rep/LATEST
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
