--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,6 +124,7 @@ jobs:
 
       - name: mkdir folder
         run: |
+          mkdir -p release
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ release/
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ release/
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ release/
