--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -197,6 +197,8 @@ jobs:
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ $folder
+          zip -rf ${ref:10}.zip $folder
+          cp ${ref:10}.zip release/
           echo $folder
           echo "111"
           ls
