--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -198,8 +198,10 @@ jobs:
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ $folder
           echo "000"
-          zip -r ${ref:10}.zip $folder/*
+          cd $release/$rep/ && zip -r ${ref:10}.zip ${ref:10}/ && rm -rf ${ref:10}/ && cd ../../../
           echo "001"
+          pwd
+          echo "002"
           cp ${ref:10}.zip release/$rep/
           echo $folder
           echo "111"
