--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -198,11 +198,11 @@ jobs:
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8/ $folder
           cp -rf  /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows/ $folder
           echo "000"
-          cd $release/$rep/ && zip -r ${ref:10}.zip ${ref:10}/ && rm -rf ${ref:10}/ && cd ../../../
+          cd $release/$rep/ && zip -r ${ref:10}.zip ${ref:10}/ && cp ${ref:10}.zip ../../../release/$rep/ && ls && cd ../../../
           echo "001"
           pwd
           echo "002"
-          cp release/$rep/${ref:10}.zip release/$rep/
+          ls release/$rep/
           echo $folder
           echo "111"
           ls
