--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,20 +107,20 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: cluster_centos
-          path: ./cmd/cluster/centos8
+          path: /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8
 
 
       - name: Download cluster_ubuntu artifact
         uses: actions/download-artifact@master
         with:
           name: cluster_ubuntu
-          path: ./cmd/cluster/ubuntu18
+          path: /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18
 
       - name: Download cluster_windows artifact
         uses: actions/download-artifact@master
         with:
           name: cluster_windows
-          path: ./cmd/cluster/windows
+          path: /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows
 
       - name: mkdir folder
         run: |
@@ -164,20 +164,20 @@ jobs:
         uses: actions/download-artifact@master
         with:
           name: cluster_centos
-          path: ./cmd/cluster/centos8
+          path: /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/centos8
 
 
       - name: Download cluster_ubuntu artifact
         uses: actions/download-artifact@master
         with:
           name: cluster_ubuntu
-          path: ./cmd/cluster/ubuntu18
+          path: /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/ubuntu18
 
       - name: Download cluster_windows artifact
         uses: actions/download-artifact@master
         with:
           name: cluster_windows
-          path: ./cmd/cluster/windows
+          path: /home/runner/work/goquarkchain/goquarkchain/cmd/cluster/windows
 
       - name: mkdir folder
         run: |
@@ -208,5 +208,5 @@ jobs:
           aws-region: us-east-1
       - name: Deploy static site to S3 bucket
         run: |
-          sudo apt-get update && sudo apt-get install awscli -y
+          sudo apt-get install awscli
           aws s3 sync release/ s3://qkcmainnet-go/data/release --acl public-read
