--- a/.github/workflows/qkcli-test.yml
+++ b/.github/workflows/qkcli-test.yml
@@ -20,4 +20,6 @@ jobs:
         with:
           go-version: "~1.14.4"
       - run: go version
-      - run: cd qkcli && go build && go install && cd tester && bash parallel_executor.sh
+      - run: |
+          pwd
+          cd qkcli && cd tester && pwd && ls
