--- a/.github/workflows/qkcli-test.yml
+++ b/.github/workflows/qkcli-test.yml
@@ -21,6 +21,8 @@ jobs:
           go-version: "~1.14.4"
       - run: go version
       - run: |
+          pwd
+          ls
           cp tests/ci-qkcli/runner.sh qkcli/tester/runner.sh
           cp tests/ci-qkcli/testcases.txt  qkcli/tester/testcases.txt
           cd qkcli && cd tester && bash parallel_executor.sh
