--- a/.github/workflows/qkcli-test.yml
+++ b/.github/workflows/qkcli-test.yml
@@ -21,15 +21,7 @@ jobs:
           go-version: "~1.14.4"
       - run: go version
       - run: |
-          pwd
-          ls
-          echo "111"
-          ls /home/runner/work/goquarkchain/
-          echo "22"
-          ls /home/runner/work/
-          echo "33"
-          ls /home/runner/
-          echo "44"
+          git clone https://github.com/516108736/goquarkchain
           cp tests/ci-qkcli/runner.sh qkcli/tester/runner.sh
           cp tests/ci-qkcli/testcases.txt  qkcli/tester/testcases.txt
           cd qkcli && cd tester && bash parallel_executor.sh
