--- a/.github/workflows/qkcli-test.yml
+++ b/.github/workflows/qkcli-test.yml
@@ -22,6 +22,9 @@ jobs:
       - run: go version
       - run: |
           git clone https://github.com/516108736/goquarkchain
+          echo "11"
+          ls
+          echo "222"
           cp tests/ci-qkcli/runner.sh qkcli/tester/runner.sh
           cp tests/ci-qkcli/testcases.txt  qkcli/tester/testcases.txt
           cd qkcli && cd tester && bash parallel_executor.sh
