--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,7 @@ jobs:
 
         include:
           - name: windows-2019-gcc
-            os: windows-2019
+            os: windows-latest
             compiler: gcc
 
     steps:
