--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,12 @@ jobs:
         with:
           msystem: MINGW64
           update: true
-          install: git mingw-w64-x86_64-toolchain ninja swig gcc
+          install: git mingw-w64-x86_64-toolchain ninja swig gcc make
+
+      - name: Install Go
+          uses: actions/setup-go@v2
+          with:
+            go-version: 1.14.1
       - name: windows-build
         run: |
           cd consensus/qkchash/native && make && cd -
