--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,13 +54,9 @@ jobs:
           msystem: MINGW64
           update: true
           install: git mingw-w64-x86_64-toolchain ninja swig gcc make
-
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: 1.14.1
       - name: windows-build
         run: |
+          echo 'export PATH=/c/Go/bin:$PATH' >> ~/.bashrc
           cd consensus/qkchash/native && make && cd -
           go version
           cd cmd/cluster && pwd && go build -o ./windows/cluster.exe
