--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -168,7 +168,7 @@ jobs:
           cp -rf  ./cmd/cluster/run_cluster.sh ./cmd/cluster/windows/
 
           chmod -R 0755 ./cmd/cluster/ubuntu18/
-          chmod -R 0755 ./cmd/cluster/centos8/b
+          chmod -R 0755 ./cmd/cluster/centos8/
           chmod -R 0755 ./cmd/cluster/windows/
 
           cd ./cmd/cluster/ && zip -r ${ref:10}.zip ubuntu18/ centos8/  windows/ && cd -
